Fix: project details popup cropped on mobile

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -157,8 +157,8 @@ li {
 #popup {
   position: fixed;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
