--- a/src/components/Popup/ProjectDetails/ProjectDetails.css
+++ b/src/components/Popup/ProjectDetails/ProjectDetails.css
@@ -1,7 +1,7 @@
 .project-details {
   position: fixed;
-  height: 80vh;
-  width: clamp(0px, 80vw, 1100px);
+  height: 80%;
+  width: clamp(0px, 80%, 1100px);
   display: flex;
   flex-direction: column;
   background: var(--background-radial);
@@ -50,11 +50,12 @@
   height: 40px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px), screen and (max-height: 768px) {
   .project-details {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     border-radius: 0;
+    overflow: auto;
   }
 
   .project-details-header {
@@ -62,12 +63,19 @@
   }
 
   .project-details-content {
+    height: auto;
     padding: 24px;
+    flex-grow: 1;
   }
 
   .project-details-links .button-icon {
     width: 24px;
     height: 24px;
+  }
+
+  .project-details-description {
+    height: 100%;
+    flex: none;
   }
 
   #close-details-button {
